# AgentPanel

./: .gitignore  DESIGN.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extensions/local/: workspace-research.panels.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  preview.rs  profile_store.rs  pty.rs  workspace_watcher.rs
src/components/: AppNotificationToast.tsx  FilePreviewDialog.tsx  MarkdownDocument.tsx  ProfileManager.tsx  SupportPanelGrid.tsx  TerminalDeck.tsx  TerminalViewport.tsx  WorkspaceDirectoryTree.tsx  WorkspaceRail.tsx
src/components/panels/: CalendarNotesPanel.tsx  KnowledgeBasePanel.tsx  SkillsPanel.tsx  TodoPanel.tsx
src/hooks/: useXterm.ts
src/lib/: china-calendar.test.ts  china-calendar.ts  file-preview.test.ts  file-preview.ts  support-panels.test.ts  support-panels.ts  tauri.ts
src/state/: store.ts
src/types/: agent.test.ts  agent.ts  support-panel.ts  terminal.ts
tests/: qa-docs.ps1
