[package]
name = "agent-panel-backend"
version = "0.1.0"
edition = "2021"
description = "Tauri 2 backend PTY/session layer for AgentPanel"

[lib]
name = "agent_panel_backend"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
flate2 = "1.1"
notify = "6"
portable-pty = "0.8"
quick-xml = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
